--- a/_archives/2016-09-23-fe-guide.md
+++ b/_archives/2016-09-23-fe-guide.md
@@ -6,23 +6,190 @@ picName: city-01.jpg
 categories: css,javascript,html
 tags: code,规范
 ---
-# CSS / SCSS 编码规范 
 
 ## 目录
-* [缩进](#tab)
-* [分号](#semicolon)
-* [引号](#quote)
-* [空格](#space)
-* [空行](#space-line)
-* [换行](#br)
-* [注释](#comment)
-* [属性](#attribute)
-* [命名](#name-rule)
-* [选择器](#selector)
-* [其它](#other)
+* [命名规范](#name)
+    * [项目命名](#name-project)
+    * [目录命名](#name-dir)
+    * [文件命名](#name-file)
+    * [图片命名](#name-image)
+* [HTML 编码规范](#html)
+    * [文档语法](#html-grammer)
+    * [文档声明](#html-doctype)
+    * [文档编码](#html-charset)
+    * [文档语言](#html-language)
+    * [文档模式](#html-mode)
+    * [属性声明](#html-attr-define)
+    * [属性顺序](#html-attr-sort)
+    * [特殊字符](#html-special-char)
+    * [资源引入](#html-resource)
+* [CSS / SCSS 编码规范](#css) 
+    * [缩进](#css-tab)
+    * [分号](#css-semicolon)
+    * [引号](#css-quote)
+    * [空格](#css-space)
+    * [空行](#css-space-line)
+    * [换行](#css-br)
+    * [注释](#css-comment)
+    * [属性](#css-attribute)
+    * [命名](#css-name-rule)
+    * [选择器](#css-selector)
+    * [其它](#css-other)
+* [JAVASCRIPT 编码规范](#js)
+    * [缩进](#js-tab)
+    * [分号](#js-semicolon)
+    * [引号](#js-quote)
+    * [空格](#js-space)
+    * [空行](#js-space-line)
+    * [换行](#js-br)
+    * [注释](#js-comment)
+    * [变量](#js-variable)
+    * [其它](#js-other)
+    * [运算符](#js-operator)
+* [SUBLIME 编辑器插件](#sublime)
+    * [SUBLIME 配置](#sublime-settings)
+    * [SUBLIME 插件](#sublime-plugins)
 
-<a name="tab"></a>
-## 缩进
+
+<a name="#name"></a>
+## 命名规范
+
+<a name="#name-project"></a>
+### 项目命名
+project_name
+
+<a name="#name-dir"></a>
+### 目录命名
+* css   目录： css
+* js    目录： js
+* image 目录： img
+* icon  目录： icon
+
+<a name="#name-file"></a>
+### 文件命名
+尽量语义化，以下划线分割
+
+<a name="#name-image"></a>
+### 图片命名
+业务线(可选) + 图片功能类别(必选) + 图片精度()
+
+* 所属业务线
+    * ps_: 网页
+    * my_: 明医
+
+* 图片功能类别：
+    * icon_：icon 图标
+    * logo_：logo 图片
+    * spr_：单页面CSS Sprites 合并图片
+    * btn_：按钮图片
+    * bg_：背景图片
+
+* 图片精度：
+    * 普清：@1x
+    * Retina：@2x | @3x
+```
+ps_logo_sogou@2x.png
+ps_bg_banner@1x.jpg
+```
+
+<a name="#html"></a>
+## HTML 编码规范
+<a name="html-grammer"></a>
+### 文档语法
+* 使用 Tab 缩进（4个空格）
+* 节点嵌套应该缩进，包括块级元素和行内元素
+* 标签属性采用双引号，不要使用单引号
+* 属性名全小写，采用中划线做分隔符
+* 标签闭合（即使 HTML5 规范中某些标签可选）
+
+<a name="html-doctype"></a>
+### 文档声明
+HTML 文档必须包含文档声明，采用统一的 HTML5 文档声明：
+``` HTML
+<!DOCTYPE html>
+```
+<a name="html-charset"></a>
+### 文档编码
+新建文档统一采用 UTF-8 编码
+``` HTML
+<meta charset="UTF-8">
+```
+若由于历史原因，有些项目使用 GBK 编码，建议如下写法
+```HTML
+<meta charset="GBK">
+```
+
+<a name="html-language"></a>
+### 文档语言
+根据HTML5规范：
+> 应在html标签上加上lang属性。这会给语音工具和翻译工具帮助，告诉它们应当怎么去发音和翻译。
+
+``` HTML
+<html lang="zh-CN">
+    
+</html>
+```
+
+<a name="html-mode"></a>
+### 文档模式
+使用 <meta> 标签可以指定页面应该用什么版本的IE来渲染。
+``` HTML
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+```
+
+<a name="html-attr-define"></a>
+### 属性声明
+* 自定义属性以 [data-*] 开头，以支持 HTML5 规范 dataset 集合
+* boolean 属性不需要声明属性值，HTML5 不需要，但是 XHTML 需要声明每个属性的属性值
+
+``` HTML
+    <div data-index="1" ></div>
+    <input type="checkbox" disabled>
+```
+
+<a name="html-attr-sort"></a>
+### 属性顺序
+* class (可复用选择器)
+* id (唯一性选择器)
+* name
+* data-*
+* src, for, type, href, value , max-length, max, min, pattern
+* placeholder, title, alt
+* required, readonly, disabled, selected
+* ...
+``` HTML
+<div class="className" id=""></div>
+```
+
+<a name="html-special-char"></a>
+### 特殊字符引用
+建议使用特殊实体
+``` HTML
+<!-- 推荐 -->
+<div>首页 &gt; 一级目录 &gt; 二级目录</div>
+
+<!-- 不推荐 -->
+<div>首页 > 一级目录 > 二级目录</div>
+```
+
+<a name="html-resource"></a>
+### 资源引入
+根据 HTML5 规范，在引入CSS和JS时不需要指明 type，因为 text/css 和 text/javascript 分别是他们的默认值。
+``` HTML
+<link rel="stylesheet" href="#">
+<style>
+    /* style */
+</style>
+
+<script src="feg.js"></script>
+<script>/* alert('FEG'); */</script>
+```
+
+<a name="#css"></a>
+## CSS / SCSS 编码规范
+
+<a name="css-tab"></a>
+### 缩进
 使用 Tab 缩进(4个空格)
 ``` CSS
 .class {
@@ -30,8 +197,8 @@ tags: code,规范
 }
 ```
 
-<a name="semicolon"></a>
-## 分号
+<a name="css-semicolon"></a>
+### 分号
 每个属性声明结尾需要加分号
 ``` CSS
 .className {
@@ -40,8 +207,8 @@ tags: code,规范
 }
 ```
 
-<a name="quote"></a>
-## 引号
+<a name="css-quote"></a>
+### 引号
 * 统一使用双引号，单双引号交替
 * url的内容要用引号
 * 属性选择器中的属性值需要引号
@@ -49,8 +216,8 @@ tags: code,规范
 background: url("./image/sogou-logou.png") no-repeat;
 ```
 
-<a name="space"></a>
-## 空格
+<a name="css-space"></a>
+### 空格
 * 不需要空格的情况
     * 属性名后
     * 多个规则的分隔符','前
@@ -84,13 +251,13 @@ background: url("./image/sogou-logou.png") no-repeat;
 }
 ```
 
-<a name="space-line"></a>
-## 空行
+<a name="css-space-line"></a>
+### 空行
 * '}'后最好跟一个空行，包括scss中嵌套的规则
 * 属性较多时需要适当的空行，参见csscombo 插件顺序
 
-<a name="br"></a>
-## 换行
+<a name="css-br"></a>
+### 换行
 * 不需要换行的情况
     * '{'前
 
@@ -99,8 +266,8 @@ background: url("./image/sogou-logou.png") no-repeat;
     * 每个属性独占一行
     * 多个规则的分隔符','后
 
-<a name="comment"></a>
-## 注释
+<a name="css-comment"></a>
+### 注释
 * 统一使用 '/* */'
 ``` CSS
 /* module class */
@@ -117,8 +284,8 @@ background: url("./image/sogou-logou.png") no-repeat;
 }
 ```
 
-<a name="attribute"></a>
-## 属性
+<a name="css-attribute"></a>
+### 属性
 * 相同十六进制颜色属性使用3个字母
 * 多个属性如果能合并，必须合并，如：border, padding, margin, background, etc;
 ``` CSS
@@ -136,20 +303,20 @@ background: url("./image/sogou-logou.png") no-repeat;
 }
 ```
 
-<a name="name-rule"></a>
-## 命名
+<a name="css-name-rule"></a>
+### 命名
 * 类名使用小写字母，以中划线分隔(其中JS类名采用 [JS-*] 格式)
 * id采用驼峰式命名
 * scss中的变量、函数、混合、placeholder采用驼峰式命名
 
-<a name="selector"></a>
-## 选择器
+<a name="css-selector"></a>
+### 选择器
 * 使用CSS3 选择器语法
 * 尽量少使用 '*' 选择器
 * 避免多层标签选择器做为子选择器
 
-<a name="other"></a>
-## 其它
+<a name="css-other"></a>
+### 其它
 * 不允许有空的规则
 * 元素选择器用小写字母
 * 去掉小数点前面的0
@@ -161,3 +328,211 @@ background: url("./image/sogou-logou.png") no-repeat;
 * 用 border: 0; 代替 border: none;
 * 选择器不要超过4层
 * 发布的代码中不要有 @import
+
+<a name="#js"></a>
+## JAVASCRIPT 编码规范
+
+<a name="js-tab"></a>
+## 缩进
+使用 Tab 缩进(4个空格)
+
+<a name="js-semicolon"></a>
+## 分号
+需在后面加分号的情况：
+* 变量声明
+* 表达式(包括函数表达式)
+* return
+* throw
+* break
+* continue
+* do-while
+
+<a name="js-quote"></a>
+## 引号
+最外层统一使用单引号。
+
+<a name="js-space"></a>
+## 空格
+* 不需要使用空格的情况
+    * 对象的属性名后
+    * 前缀一元运算符后
+    * 后缀一元运算符前
+    * 函数调用括号前
+    * 无论是函数声明还是函数表达式，'('前不要空格
+    * 数组的'['后和']'前
+    * 对象的'{'后和'}'前
+    * 运算符'('后和')'前
+
+* 需要空格的情况
+    * 二元运算符前后
+    * 三元运算符 '? :' 前后
+    * 代码块 '{' 前
+    * 下列关键字前：else, while, catch, finally
+    * 下列关键字后：if, else, for, while, do, switch, case, try, catch, finally, with, return, typeof
+    * 单行注释 '//' 后（若单行注释和代码同行，则 '//' 前也需要），多行注释 '*' 后
+    * 对象的属性值前
+    * for 循环，分号后留有一个空格，前置条件如果有多个，逗号后留一个空格
+    * 无论是函数声明还是函数表达式，'{' 前一定要有空格
+    * 函数的参数之间
+
+<a name="js-space-line"></a>
+## 空行
+需要空行的情况：
+* 变量声明后（当变量声明在代码块的最后一行时，则无需空行）
+* 注释前（当注释在代码块的第一行时，则无需空行）
+* 代码块后（在函数调用、数组、对象中则无需空行）
+
+<a name="js-br"></a>
+## 换行
+* 不需要换行的情况
+    * 关键字 else, catch, finally 后
+    * 代码块 '{' 前
+
+* 需要换行的情况
+    * 代码块'{'后和'}'前
+    * 变量赋值后
+
+<a name="js-comment"></a>
+## 注释
+* 单行注释
+    * 双斜线后，必须跟一个空格
+    * 缩进与下一行代码保持一致
+
+* 多行注释
+    * 最少三行, '*'后跟一个空格
+    * 使用范围
+        * 难于理解的代码段
+        * 可能存在错误的代码段
+        * 浏览器特殊的HACK代码
+        * 业务逻辑强相关的代码  
+
+* 文档注释
+    * 各类标签 @param, @return, 参考 docblocker 、jsdoc 等插件
+    * 建议在以下情况下使用：
+        * 所有常量
+        * 所有函数
+        * 所有类
+
+<a name="js-variable"></a>
+## 变量
+* 变量命名
+    * 标准变量采用驼峰式命名规则
+    * 'ID' 在变量名中全大写
+    * 'URL' 在变量名中全大写
+    * 'Android' 在变量名中大写第一个字母
+    * 'iOS' 在变量名中小写第一个，大写后两个字母
+    * 常量全大写，用下划线连接
+    * 构造函数，大写第一个字母
+    * jQuery/Zepto 对象必须以 '$' 开头命名
+
+* 变量声明
+    * 单个函数中的变量声明前置，用一个 var 声明
+    * 使用 ES6 语法时，var/let/const的使用
+    * 采用字面量方式声明变量
+
+* 函数
+    * 立即执行函数外必须包一层括号
+    * 不要给inline function命名
+    * 注意函数提升
+
+* 数组/对象
+    * 对象属性名不需要加引号(JSON 对象属性名除外)
+    * 对象缩进遵守缩进规则
+    * 数组中不要存空元素
+
+* Null
+    * 适用场景
+        * 初始化一个将来可能被赋值为对象的变量
+        * 与已经初始化的变量做比较
+        * 作为一个参数为对象的函数的调用传参
+        * 作为一个返回对象的函数的返回值
+    * 不适用场景
+        * 不要用null来判断函数调用时有无传参
+        * 不要与未初始化的变量做比较
+
+* Undefined
+    * 永远不要直接使用 undefined 进行变量判断
+    * 使用 typeof 和字符串 'undefined' 对变量进行判断
+``` JS
+'undefined' === typeof a;
+```
+
+<a name="js-other"></a>
+## 其它
+* 不要在内置对象的原型上添加方法，如：Array, Date
+* 不要先使用后声明变量
+* 不要在同个作用域下声明同名变量
+* 不要在一些不需要的地方加括号，如：delete (a.b)
+* 不要使用未声明的变量
+* 不要声明了变量却不使用
+* 不要在应该做比较的地方做赋值
+* 不要在提交的代码里出现debugger
+* 不要在循环内部声明函数
+* 不要出现空的代码块(空函数声明除外)
+* 用'===', '!==' 代替 '==', '!='
+* for-in里一定要有hasOwnProperty的判断
+* 对上下文this的引用只能使用 'me', 'self'其中一个来命名
+
+<a name="js-operator"></a>
+## 运算符优先级
+| 运算符 | 说明 
+---------| ----
+| .[] ()                            | 字段访问、数组索引、函数调用和表达式分组
+| ++ — – ~ ! delete new typeof void | 一元运算符、返回数据类型、对象创建、未定义的值
+| * / %                             | 相乘、相除、求余数
+| + – +                             | 相加、相减、字符串串联
+| << >> >>>                         | 移位
+| < <= > >= instanceof              | 小于、小于或等于、大于、大于或等于、是否为特定类的实例
+| == != === !==                     | 相等、不相等、全等，不全等
+| &                                 | 按位“与”
+| ^                                 | 按位“异或”
+| |                                 | 按位“或”
+| &&                                | 逻辑“与”
+| ||                                | 逻辑“或”
+| ?:                                | 条件运算
+| = OP =                            | 赋值、赋值运算（如 += 和 &=）
+| ,                                 | 多个计算
+
+<a name="#sublime"></a>
+## SUBLIME 编辑器插件
+
+<a name="#sublime-settings"></a>
+### Sublime settings User
+``` JS
+{
+    "color_scheme": "Packages/Color Scheme - Default/Monokai.tmTheme",
+    "font_size": 12.0,
+    "tab_size": 4,
+    "draw_white_space": "all"
+}
+```
+
+<a name="#sublime-plugins"></a>
+### Sublime plugins
+* [Alignment](https://github.com/wbond/sublime_alignment)
+    =, : 等对齐工具
+* [BracketHighlighter](https://github.com/facelessuser/BracketHighlighter)
+    Bracket and tag highlighter for Sublime Text
+* [ConvertToUTF8](https://github.com/seanliang/ConvertToUTF8)
+    A Sublime Text 2 & 3 plugin for editing and saving files encoded in GBK, BIG5, EUC-KR, EUC-JP, Shift_JIS, etc.
+* [Csscomb](http://csscomb.com/)
+    CSScomb Makes your code beautiful
+* [CSSLint](http://csslint.net/)
+    Automated linting of Cascading Stylesheets
+* [DocBlockr](https://github.com/spadgos/sublime-jsdocs)
+    Simplifies writing DocBlock comments in Javascript, PHP, CoffeeScript, Actionscript, C & C++
+* [Jshint](http://jshint.com/)
+    JSHint, a tool that helps to detect errors and potential problems in your JavaScript code.
+* [Jsformat](https://github.com/jdc0589/JsFormat)
+    Javascript, html, json formatting for Sublime Text 2 & 3
+* [MarkdownEditing](https://github.com/SublimeText-Markdown/MarkdownEditing)
+* [MarkdownPreview](https://github.com/revolunet/sublimetext-markdown-preview)
+* [Emmet](http://docs.emmet.io/)
+    Emmet — the essential toolkit for web-developers
+* [Sass](https://packagecontrol.io/packages/Sass)
+    Sass support for TextMate & Sublime Text (2 & 3)
+* [Sftp](https://wbond.net/sublime_packages/sftp)
+    Spend less time managing file transfers and more time coding. FTP, FTPS and SFTP support for Sublime Text 2 & 3 that is blazing fast, with smart features, flexible workflow options and top-notch support.
+* [SubmimeTmpl](https://github.com/kairyou/SublimeTmpl)
+    Create File From Templates for SublimeText 2 / ST3
+
