--- a/_archives/2016-09-23-fe-guide.md
+++ b/_archives/2016-09-23-fe-guide.md
@@ -493,10 +493,10 @@ background: url("./image/sogou-logou.png") no-repeat;
 | = OP =                            | 赋值、赋值运算（如 += 和 &=）
 | ,                                 | 多个计算
 
-<a name="#sublime"></a>
+<a name="sublime"></a>
 ## SUBLIME 编辑器插件
 
-<a name="#sublime-settings"></a>
+<a name="sublime-settings"></a>
 ### Sublime settings User
 ``` JS
 {
@@ -507,7 +507,7 @@ background: url("./image/sogou-logou.png") no-repeat;
 }
 ```
 
-<a name="#sublime-plugins"></a>
+<a name="sublime-plugins"></a>
 ### Sublime plugins
 * [Alignment](https://github.com/wbond/sublime_alignment)
     =, : 等对齐工具
