--- a/_archives/2016-09-23-fe-guide.md
+++ b/_archives/2016-09-23-fe-guide.md
@@ -4,7 +4,7 @@ author: Benjamin
 date: 2016-09-23 17:56:25
 picName: city-01.jpg
 categories: css,javascript,html
-tags: code,规范
+tags: guide
 ---
 
 ## 目录
